<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2">


    <Button android:id="@+id/btn_link_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_link_login"
        android:background="@null"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/signup_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textColor="@android:color/holo_orange_light"
        android:layout_above="@+id/btn_signup"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="26dp" />

    <EditText
        android:id="@+id/signup_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textColor="@android:color/holo_orange_light"
        android:layout_above="@+id/signup_input_password"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:id="@+id/signup_input_enrollment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enrollment"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textColor="@android:color/holo_orange_light"
        android:layout_above="@+id/signup_input_email"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:entries="@array/branch_names"
        android:textAlignment="center"
        style="@style/customtheme"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:layout_above="@+id/signup_input_enrollment"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:id="@+id/signup_input_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Last Name"
        android:layout_above="@+id/tvspinbranch"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textColor="@android:color/holo_orange_light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:background="@android:color/background_light"
        android:textColor="@android:color/black"
        android:layout_above="@+id/btn_link_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Branch : "
        android:textSize="17sp"
        android:id="@+id/tvspinbranch"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_above="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/signup_input_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="First Name"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textColor="@android:color/holo_orange_light"
        android:layout_above="@+id/signup_input_last_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="LEARN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:id="@+id/textView7"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_marginLeft="5sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/signup_input_first_name"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo6"
        android:layout_marginLeft="94dp"
        android:layout_marginStart="94dp"
        android:id="@+id/imageView2"
        android:layout_above="@+id/signup_input_first_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
